--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en" dir="ltr"><head><meta charset="utf-8"><title>Natasha Alderson</title></head><body><div id="root"></div><script src="bundle.js"></script></body></html>
+<!doctype html><html lang="en" dir="ltr"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1"/><title>Natasha Alderson</title></head><body><div id="root"></div><script src="bundle.js"></script></body></html>
